1차 테스트 후 백엔드 수정사항 반영